--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,15 @@ body {
 }
 
 a{
-    color: #cfcfd1;
+    color: #ff5733;
     text-decoration: none;
-    transition: .5s all ease; }
+    transition: .3s all ease; 
+}
+
 a:hover {
-    color:#ff5733;
-    text-decoration: none; }
+    color:#cfcfd1;
+    text-decoration: underline; 
+}
 
 .top-menu li {
     display: inline-block;
@@ -24,20 +27,27 @@ h1, h2, h3, h4, h5{
   font-family: "Roboto Mono", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; 
 }
 
-.title_container{
-    align-self: center;
-}
-
 .title{
     color: #cfcfd1;
-    text-align: center;
+    text-align: left;
+    margin-right: 5%;
+    margin-left: 5%;
 }
 
 .subtitle{
     color:#ff5733;
-    text-align: center;
+    text-align: left;
+    margin-right: 5%;
+    margin-left: 5%;
 }
 
-.main-content{
-    text-align: center;
+.main-link{
+    font-weight: bold;
+}
+
+.text-container{
+    font-size: 1.1rem;
+    text-align: left;
+    margin-right: 5%;
+    margin-left: 5%;
 }
