Remove grey lines below image

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/f2df7ca24cc95a30cce6271266fe34ab2.png");
   background-position: 50% 50%;
+  background-color: black;
 }
 
 .u-section-1 .u-sheet-1 {
