--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
- .u-section-1 {
+.u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/f2df7ca24cc95a30cce6271266fe34ab2.png");
+  background-size: 140%;
   background-position: 50% 50%;
   background-color: black;
 }
@@ -30,117 +31,55 @@
 }
 
 @media (max-width: 1199px) {
-   .u-section-1 {
-    background-size: 195%;
-  }
-
   .u-section-1 .u-sheet-1 {
-    min-height: 580px;
-  }
-
-  .u-section-1 .u-image-1 {
-    margin-top: 162px;
-    margin-left: 41px;
+    min-height: 350px;
   }
 
   .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: -218px;
-    margin-left: 344px;
+    margin-top: 20px;
+    margin-left: 103px;
   }
 
   .u-section-1 .u-text-2 {
-    width: auto;
-    margin-right: 348px;
-    margin-left: auto;
+    margin-left: 103px;
   }
 
   .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 29px;
-    margin-right: 292px;
-    margin-left: auto;
+    margin-left: 103px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 581px;
-  }
-
-  .u-section-1 .u-image-1 {
-    margin-top: 76px;
-    margin-right: 221px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 22px;
-    margin-left: 267px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-right: 266px;
-    margin-left: 267px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 10px;
-    margin-right: 174px;
+    min-height: 268px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 625px;
-  }
-
-  .u-section-1 .u-image-1 {
-    margin-left: 139px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 20px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-right: 76px;
-    margin-left: 139px;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 13px;
-    margin-right: 92px;
+    min-height: 201px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 580px;
+    min-height: 127px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: 62px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 83px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 33px;
-    margin-left: 91px;
+    margin-left: 83px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 0;
-    margin-right: -91px;
-    margin-left: 91px;
+    margin-left: 83px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 8px;
-    margin-right: 54px;
-    margin-left: 91px;
+    margin-left: 83px;
   }
 } .u-section-2 {
   background-image: none;
@@ -381,59 +320,158 @@
   }
 }
 
-@media (max-width: 767px) {
-  .u-section-3 .u-repeater-1 {
-    min-height: 865px;
-  }
-
+@media (max-width: 991px) {
   .u-section-3 .u-text-5 {
     width: auto;
+    margin-right: -626px;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-7 {
+    width: auto;
+    margin-top: 9px;
     margin-right: -432px;
+  }
+
+  .u-section-3 .u-text-8 {
+    width: auto;
+    margin-top: 0;
+    margin-right: -640px;
+  }
+
+  .u-section-3 .u-text-9 {
+    width: auto;
+    margin-top: 5px;
+    margin-right: -626px;
   }
 
   .u-section-3 .u-text-13 {
     width: auto;
+    margin-right: -626px;
+  }
+
+  .u-section-3 .u-text-14 {
+    margin-top: 0;
+  }
+
+  .u-section-3 .u-text-15 {
+    width: auto;
+    margin-top: 9px;
     margin-right: -432px;
+  }
+
+  .u-section-3 .u-text-16 {
+    width: auto;
+    margin-top: 0;
+    margin-right: -640px;
+  }
+
+  .u-section-3 .u-text-17 {
+    width: auto;
+    margin-top: 5px;
+    margin-right: -626px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1129px;
+  }
+
+  .u-section-3 .u-list-1 {
+    margin-top: 24px;
+    margin-left: 27px;
+  }
+
+  .u-section-3 .u-repeater-1 {
+    min-height: 914px;
+  }
+
+  .u-section-3 .u-text-2 {
+    margin-top: 20px;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-top: 13px;
+    margin-right: -392px;
+  }
+
+  .u-section-3 .u-text-4 {
+    margin-top: 2px;
+    margin-right: -563px;
+  }
+
+  .u-section-3 .u-text-5 {
+    margin-top: -3px;
+    margin-right: -446px;
+  }
+
+  .u-section-3 .u-text-9 {
+    margin-right: -446px;
+  }
+
+  .u-section-3 .u-text-10 {
+    margin-top: 20px;
+  }
+
+  .u-section-3 .u-text-11 {
+    margin-top: 13px;
+    margin-right: -392px;
+  }
+
+  .u-section-3 .u-text-12 {
+    margin-top: 2px;
+    margin-right: -563px;
+  }
+
+  .u-section-3 .u-text-13 {
+    margin-top: -3px;
+    margin-right: -446px;
+  }
+
+  .u-section-3 .u-text-17 {
+    margin-right: -446px;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1252px;
+  }
+
+  .u-section-3 .u-line-1 {
+    top: 124px;
+    transform-origin: center top 0px;
+    height: 829px;
+    left: 0;
+  }
+
+  .u-section-3 .u-list-1 {
+    margin-top: 13px;
+    margin-left: -21px;
+  }
+
   .u-section-3 .u-repeater-1 {
     min-height: 1056px;
   }
 
-  .u-section-3 .u-shape-1 {
-    margin-top: -19px;
-  }
-
-  .u-section-3 .u-text-3 {
-    margin-top: 30px;
-  }
-
-  .u-section-3 .u-text-4 {
-    margin-top: -51px;
-  }
-
   .u-section-3 .u-text-5 {
-    margin-top: 25px;
-    margin-right: -281px;
+    margin-right: -286px;
   }
 
-  .u-section-3 .u-shape-3 {
-    margin-top: -19px;
-  }
-
-  .u-section-3 .u-text-11 {
-    margin-top: 30px;
-  }
-
-  .u-section-3 .u-text-12 {
-    margin-top: -51px;
+  .u-section-3 .u-text-9 {
+    margin-right: -286px;
   }
 
   .u-section-3 .u-text-13 {
-    margin-top: 25px;
-    margin-right: -281px;
+    margin-right: -286px;
+  }
+
+  .u-section-3 .u-text-17 {
+    margin-right: -286px;
   }
 } .u-section-4 {
   background-image: url("images/f2df7ca24cc95a30cce6271266fe34ab2.png");
@@ -581,14 +619,34 @@
 @media (max-width: 1199px) {
   .u-section-5 .u-line-1 {
     width: 912px;
-    margin: 42px auto 0 28px;
+    left: auto;
+    top: 154px;
+    right: -15px;
+  }
+
+  .u-section-5 .u-list-1 {
+    margin-top: 13px;
+    margin-left: 24px;
   }
 }
 
 @media (max-width: 991px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 645px;
+  }
+
   .u-section-5 .u-line-1 {
     width: 720px;
-    margin-left: 0;
+    margin: 42px auto 0 0;
+  }
+
+  .u-section-5 .u-list-1 {
+    margin-top: 4px;
+    margin-left: 36px;
+  }
+
+  .u-section-5 .u-repeater-1 {
+    min-height: 472px;
   }
 
   .u-section-5 .u-text-5 {
@@ -603,8 +661,23 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 670px;
+  }
+
   .u-section-5 .u-line-1 {
     width: 540px;
+    top: 211px;
+    right: -50px;
+  }
+
+  .u-section-5 .u-list-1 {
+    margin-top: 10px;
+    margin-left: 0;
+  }
+
+  .u-section-5 .u-repeater-1 {
+    min-height: 497px;
   }
 
   .u-section-5 .u-text-5 {
@@ -617,8 +690,20 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 703px;
+  }
+
   .u-section-5 .u-line-1 {
-    width: 340px;
+    left: 20px;
+    top: 169px;
+    height: 223px;
+    width: 3px;
+  }
+
+  .u-section-5 .u-list-1 {
+    margin-top: 13px;
+    margin-bottom: 57px;
   }
 
   .u-section-5 .u-repeater-1 {
@@ -642,12 +727,13 @@
   .u-section-5 .u-text-4 {
     width: auto;
     margin-top: 0;
+    margin-right: -306px;
   }
 
   .u-section-5 .u-text-5 {
     margin-top: 0;
     margin-right: -286px;
-    margin-bottom: -13px;
+    margin-bottom: 0;
   }
 
   .u-section-5 .u-text-6 {
@@ -667,12 +753,13 @@
   .u-section-5 .u-text-8 {
     width: auto;
     margin-top: 0;
+    margin-right: -306px;
   }
 
   .u-section-5 .u-text-9 {
     margin-top: 0;
     margin-right: -286px;
-    margin-bottom: -13px;
+    margin-bottom: 0;
   }
 }.u-section-6 .u-sheet-1 {
   min-height: 747px;
@@ -789,6 +876,14 @@
     width: 540px;
   }
 
+  .u-section-6 .u-list-1 {
+    margin-top: 0;
+  }
+
+  .u-section-6 .u-repeater-1 {
+    min-height: 554px;
+  }
+
   .u-section-6 .u-text-2 {
     width: auto;
     margin-right: -323px;
@@ -834,7 +929,11 @@
 
 @media (max-width: 575px) {
   .u-section-6 .u-line-1 {
+    left: auto;
+    top: 172px;
     width: 340px;
+    height: 388px;
+    right: -67px;
   }
 
   .u-section-6 .u-text-2 {
@@ -1144,8 +1243,9 @@
   }
 
   .u-section-8 .u-list-1 {
-    width: 283px;
-    margin-top: 31px;
+    width: 440px;
+    margin-top: 21px;
+    margin-right: 0;
   }
 
   .u-section-8 .u-repeater-1 {
@@ -1154,7 +1254,7 @@
 
   .u-section-8 .u-text-6 {
     width: auto;
-    margin-top: 60px;
+    margin-top: 70px;
     margin-left: auto;
   }
 
@@ -1191,17 +1291,17 @@
 
 @media (max-width: 575px) {
   .u-section-8 .u-sheet-1 {
-    min-height: 1424px;
+    min-height: 1345px;
   }
 
   .u-section-8 .u-text-1 {
-    margin-right: 88px;
-    margin-left: 60px;
+    margin-right: auto;
+    margin-left: 74px;
   }
 
   .u-section-8 .u-list-1 {
-    width: 234px;
-    margin-right: 0;
+    width: 287px;
+    margin-right: 19px;
   }
 
   .u-section-8 .u-repeater-1 {
@@ -1218,7 +1318,7 @@
   }
 
   .u-section-8 .u-text-9 {
-    margin-right: 93px;
+    margin-right: auto;
     margin-left: 34px;
   }
 
