--- a/Posts.css
+++ b/Posts.css
@@ -1,4 +1,4 @@
- .u-section-1 {
+.u-section-1 {
   background-image: none;
 }
 
@@ -75,80 +75,131 @@
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 323px;
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+    margin-top: 34px;
+    margin-right: -20px;
+    margin-left: 20px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-right: 811px;
-    margin-left: 0;
+    width: auto;
+    margin-right: 791px;
+    margin-left: 20px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-right: 697px;
-    margin-left: 0;
+    width: auto;
+    margin-right: 677px;
+    margin-left: 20px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 0;
+    margin-left: 20px;
   }
 }
 
 @media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 477px;
+  }
+
+  .u-section-1 .u-blog-1 {
+    margin-top: 61px;
+    margin-bottom: 20px;
+    height: auto;
+  }
+
+  .u-section-1 .u-repeater-1 {
+    min-height: 396px;
+  }
+
   .u-section-1 .u-image-1 {
     width: 720px;
     height: 133px;
   }
 
+  .u-section-1 .u-text-1 {
+    margin-top: 20px;
+  }
+
   .u-section-1 .u-text-2 {
-    margin-right: 591px;
+    margin-right: 571px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-right: 477px;
+    margin-right: 457px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 511px;
+  }
+
+  .u-section-1 .u-repeater-1 {
+    min-height: 430px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-bottom: 20px;
+  }
+
   .u-section-1 .u-image-1 {
-    width: 540px;
-    height: 100px;
+    height: 134px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-1 .u-text-1 {
+    margin-right: 20px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-right: 411px;
+    margin-right: 391px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-right: 297px;
+    margin-right: 277px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-top: 10px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 693px;
+    min-height: 480px;
+  }
+
+  .u-section-1 .u-blog-1 {
+    margin-top: 30px;
+    height: auto;
   }
 
   .u-section-1 .u-container-layout-1 {
-    padding: 17px 4px;
-  }
-
-  .u-section-1 .u-image-1 {
-    width: 340px;
-    height: 63px;
+    padding-top: 17px;
+    padding-bottom: 17px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 230px;
+    margin-right: -16px;
+    margin-left: 24px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-right: 211px;
+    margin-right: 195px;
+    margin-left: 24px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-right: 97px;
+    margin-right: 81px;
+    margin-left: 24px;
+  }
+
+  .u-section-1 .u-btn-2 {
+    margin-left: 24px;
   }
 } .u-section-2 {
   background-image: none;
@@ -227,68 +278,123 @@
   }
 
   .u-section-2 .u-text-1 {
-    margin-top: 323px;
-    margin-left: 0;
-    margin-right: 0;
+    width: auto;
+    margin-right: -20px;
+    margin-left: 20px;
   }
 
   .u-section-2 .u-text-2 {
-    margin-right: 811px;
-    margin-left: 0;
+    width: auto;
+    margin-right: 791px;
+    margin-left: 20px;
   }
 
   .u-section-2 .u-text-3 {
-    margin-right: 0;
-    margin-left: 0;
+    width: auto;
+    margin-right: -20px;
+    margin-left: 20px;
   }
 
   .u-section-2 .u-btn-2 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-right: 773px;
+    margin-left: 20px;
   }
 }
 
 @media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 465px;
+  }
+
+  .u-section-2 .u-blog-1 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    height: auto;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    min-height: 425px;
+  }
+
   .u-section-2 .u-image-1 {
     width: 720px;
     height: 133px;
   }
 
   .u-section-2 .u-text-2 {
-    margin-right: 591px;
+    margin-right: 571px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-right: 553px;
   }
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 542px;
+  }
+
+  .u-section-2 .u-blog-1 {
+    margin-bottom: 37px;
+  }
+
+  .u-section-2 .u-repeater-1 {
+    min-height: 485px;
+  }
+
+  .u-section-2 .u-container-layout-1 {
+    padding-bottom: 23px;
+  }
+
   .u-section-2 .u-image-1 {
-    width: 540px;
-    height: 100px;
+    height: 157px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-2 .u-text-2 {
-    margin-right: 411px;
+    margin-right: 391px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-top: 6px;
+    margin-right: auto;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 693px;
+    min-height: 613px;
+  }
+
+  .u-section-2 .u-blog-1 {
+    margin-bottom: 20px;
+    height: auto;
   }
 
   .u-section-2 .u-container-layout-1 {
-    padding: 17px 4px;
-  }
-
-  .u-section-2 .u-image-1 {
-    width: 340px;
-    height: 63px;
+    padding-top: 17px;
+    padding-bottom: 17px;
   }
 
   .u-section-2 .u-text-1 {
-    margin-top: 230px;
+    margin-right: -16px;
+    margin-left: 24px;
   }
 
   .u-section-2 .u-text-2 {
-    margin-right: 211px;
+    margin-right: 195px;
+    margin-left: 24px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+
+  .u-section-2 .u-btn-2 {
+    margin-left: 24px;
   }
 }
