--- a/index.css
+++ b/index.css
@@ -1,8 +1,5 @@
 .u-section-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/f2df7ca24cc95a30cce6271266fe34ab2.png");
-  background-size: 140%;
-  background-position: 50% 50%;
-  background-color: black;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -82,6 +79,10 @@
 }
 
 @media (max-width: 767px) {
+   .u-section-1 {
+    background-size: auto 180%;
+  }
+
   .u-section-1 .u-image-1 {
     margin-top: 80px;
   }
@@ -97,15 +98,17 @@
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 11px;
-    margin-left: auto;
-    margin-bottom: 58px;
+    margin: 17px 85px 51px auto;
   }
 }
 
 @media (max-width: 575px) {
+   .u-section-1 {
+    background-size: auto 165%;
+  }
+
   .u-section-1 .u-sheet-1 {
-    min-height: 503px;
+    min-height: 529px;
   }
 
   .u-section-1 .u-image-1 {
@@ -121,7 +124,9 @@
   }
 
   .u-section-1 .u-text-3 {
-    margin: 12px 15px 51px;
+    margin-top: 12px;
+    margin-right: 42px;
+    margin-left: 92px;
   }
 } .u-section-2 {
   background-image: none;
