--- a/posts/posts.css
+++ b/posts/posts.css
@@ -48,722 +48,31 @@
   text-align: center;
 }
 
-.u-section-2 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-2 .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-2 .u-btn-3 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-2 .u-btn-4 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-2 .u-btn-5 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-2 .u-btn-6 {
-  background-image: none;
-  padding: 0;
-}.u-section-3 .u-sheet-1 {
-  min-height: 655px;
-}
-
-.u-section-3 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-3 .u-text-2 {
-  font-size: 1.25rem;
-  margin: 20px auto;
-}
-
-.u-section-3 .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-4 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-4 .u-btn-2 {
-  background-image: none;
-  margin-top: 160px;
-  padding: 0;
-}
-
-.u-section-4 .u-btn-3 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-5 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-6 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-6 .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-7 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-7 .u-btn-2 {
-  background-image: none;
-  margin-top: 0;
-  padding: 0;
-}
-
-.u-section-7 .u-btn-3 {
-  background-image: none;
-  margin-top: 0;
-  padding: 0;
-}
-
-.u-section-7 .u-btn-4 {
-  background-image: none;
-  margin-top: 32px;
-  padding: 0;
-}
-
-.u-section-7 .u-btn-5 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-8 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-8 .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-8 .u-btn-3 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-8 .u-btn-4 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-9 .u-sheet-1 {
-  min-height: 189px;
-}
-
-.u-section-10 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-10 .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-10 .u-btn-3 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-11 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-11 .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-11 .u-btn-3 {
-  background-image: none;
-  margin-top: 0;
-  padding: 0;
-}
-
-.u-section-11 .u-btn-4 {
-  background-image: none;
-  margin-top: 0;
-  padding: 0;
-}
-
-.u-section-12 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-12 .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-13 .u-btn-1 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-13 .u-btn-2 {
-  background-image: none;
-  padding: 0;
-}
-
-.u-section-13 .u-btn-3 {
-  background-image: none;
-  padding: 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 1106px;
-  }
-
-  .u-section-7 .u-text-1 {
-    width: 267px;
-    margin-right: 673px;
-  }
-
-  .u-section-7 .u-text-3 {
-    margin-right: 716px;
-    width: 224px;
-  }
-
-  .u-section-7 .u-image-1 {
-    margin-top: 20px;
-  }
-
-  .u-section-7 .u-text-5 {
-    margin-top: 15px;
-    margin-left: 84px;
-    margin-right: 84px;
-  }
-
-  .u-section-8 .u-sheet-1 {
-    min-height: 2008px;
-  }
-
-  .u-section-8 .u-text-1 {
-    width: auto;
-    margin-right: 202px;
-    margin-left: 293px;
-  }
-
-  .u-section-8 .u-image-2 {
-    margin-top: 25px;
-    margin-right: auto;
-  }
-
-  .u-section-8 .u-text-4 {
-    margin-top: 24px;
-  }
-
-  .u-section-8 .u-image-3 {
-    margin-top: 28px;
-    margin-right: auto;
-  }
-
-  .u-section-8 .u-text-5 {
-    width: auto;
-    margin-top: 7px;
-    margin-right: 46px;
-    margin-left: 137px;
-  }
-
-  .u-section-8 .u-image-4 {
-    margin-top: 36px;
-  }
-  .u-section-11 .u-sheet-1 {
-    min-height: 1533px;
-  }
-
-  .u-section-11 .u-image-1 {
-    margin-top: 11px;
-    margin-right: auto;
-  }
-
-  .u-section-11 .u-text-3 {
-    margin-top: 29px;
-  }
-
-  .u-section-11 .u-image-2 {
-    height: 783px;
-  }
-
-  .u-section-12 .u-sheet-1 {
-    min-height: 1721px;
-  }
-
-  .u-section-12 .u-image-2 {
-    margin-top: 20px;
-    margin-right: auto;
-  }
-
-  .u-section-12 .u-text-4 {
-    margin-top: 23px;
-  }
-
-  .u-section-12 .u-image-3 {
-    height: 546px;
-  }
-
-  .u-section-13 .u-sheet-1 {
-    min-height: 2535px;
-  }
-
-  .u-section-13 .u-image-1 {
-    margin-top: 17px;
-    margin-left: auto;
-  }
-
-  .u-section-13 .u-text-3 {
-    margin-top: 26px;
-  }
-
-  .u-section-13 .u-image-2 {
-    margin-top: 17px;
-    margin-right: auto;
-  }
-
-  .u-section-13 .u-text-6 {
-    margin-top: 26px;
-  }
-
-  .u-section-13 .u-image-3 {
-    width: 940px;
-    height: 231px;
-  }
-
-  .u-section-13 .u-image-4 {
-    width: 940px;
-    height: 564px;
-  }
-
-  .u-section-14 .u-sheet-1 {
-    min-height: 405px;
-  }
-
-  .u-section-15 .u-sheet-1 {
-    min-height: 1137px;
-  }
-}
-
 @media (max-width: 991px) {
-  .u-section-4 .u-text-3 {
-    margin-top: 20px;
-  }
-
-  .u-section-5 .u-sheet-1 {
-    min-height: 545px;
-  }
-
-  .u-section-5 .u-image-1 {
-    width: 720px;
-    height: 300px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-sheet-1 {
-    min-height: 486px;
-  }
-
-  .u-section-6 .u-image-1 {
-    width: 720px;
-    height: 300px;
-  }
-
-  .u-section-7 .u-text-1 {
-    margin-right: 453px;
-  }
-
-  .u-section-7 .u-text-3 {
-    margin-right: 496px;
-  }
-
-  .u-section-7 .u-text-5 {
-    margin-left: auto;
-    margin-right: auto;
-    width: 720px;
-  }
-
-  .u-section-8 .u-text-1 {
-    margin-left: 183px;
-    margin-right: 128px;
-  }
-
-  .u-section-8 .u-text-5 {
-    margin-right: 0;
-    margin-left: 0;
-  }
-
-  .u-section-12 .u-sheet-1 {
-    min-height: 1617px;
-  }
-
-  .u-section-12 .u-image-1 {
-    margin-right: 79px;
-  }
-
-  .u-section-12 .u-image-3 {
-    width: 720px;
-    height: 442px;
-  }
-
-  .u-section-13 .u-sheet-1 {
-    min-height: 2349px;
-  }
-
-  .u-section-13 .u-image-3 {
-    width: 720px;
-    height: 177px;
-  }
-
-  .u-section-13 .u-image-4 {
-    width: 720px;
-    height: 432px;
-  }
-
-  .u-section-14 .u-sheet-1 {
-    min-height: 505px;
+  .u-block{
+    margin-left: 15%;
+    margin-right: 15%;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 636px;
+  .u-block{
+    margin-left: 10%;
+    margin-right: 10%;
   }
 
-  .u-section-3 .u-image-1 {
-    width: 540px;
-    height: 337px;
-  }
-
-  .u-section-5 .u-sheet-1 {
-    min-height: 470px;
-  }
-
-  .u-section-5 .u-image-1 {
-    width: 540px;
-    height: 225px;
-  }
-
-  .u-section-4 .u-sheet-1 {
-    min-height: 974px;
-  }
-
-  .u-section-4 .u-image-1 {
-    width: 540px;
-    height: 337px;
-  }
-
-  .u-section-4 .u-text-3 {
-    margin-top: 0;
-  }
-  
-  .u-section-6 .u-sheet-1 {
-    min-height: 411px;
-  }
-
-  .u-section-6 .u-image-1 {
-    width: 540px;
-    height: 225px;
-  }
-
-  .u-section-7 .u-sheet-1 {
-    min-height: 1063px;
-  }
-
-  .u-section-7 .u-text-1 {
-    margin-right: 273px;
-  }
-
-  .u-section-7 .u-text-3 {
-    margin-right: 316px;
-  }
-
-  .u-section-7 .u-image-1 {
-    width: 540px;
-    height: 380px;
-  }
-
-  .u-section-7 .u-text-5 {
-    width: 540px;
-  }
-  
-  .u-section-8 .u-sheet-1 {
-    min-height: 1837px;
-  }
-
-  .u-section-8 .u-text-1 {
-    margin-left: 93px;
-    margin-right: 38px;
-  }
-
-  .u-section-8 .u-image-3 {
-    width: 540px;
-    height: 408px;
-  }
-
-  .u-section-8 .u-image-4 {
-    width: 540px;
-    height: 261px;
-  }
-
-  .u-section-8 .u-text-6 {
-    width: 540px;
-  }
-
-  .u-section-10 .u-image-1 {
-    width: 540px;
-    height: 55px;
-  }
-  
-  .u-section-11 .u-sheet-1 {
-    min-height: 1424px;
-  }
-
-  .u-section-11 .u-image-1 {
-    width: 540px;
-    height: 69px;
-  }
-
-  .u-section-11 .u-image-2 {
-    width: 540px;
-    height: 685px;
-  }
-  
-  .u-section-12 .u-sheet-1 {
-    min-height: 1444px;
-  }
-
-  .u-section-12 .u-image-1 {
-    width: 540px;
-    height: 339px;
-    margin-right: 0;
-  }
-
-  .u-section-12 .u-image-3 {
-    width: 540px;
-    height: 332px;
-  }
-  
-  .u-section-13 .u-sheet-1 {
-    min-height: 2197px;
-  }
-
-  .u-section-13 .u-image-3 {
-    width: 540px;
-    height: 133px;
-  }
-
-  .u-section-13 .u-text-7 {
-    width: 540px;
-  }
-
-  .u-section-13 .u-image-4 {
-    width: 540px;
-    height: 324px;
-  }
-
-  .u-section-14 .u-sheet-1 {
-    min-height: 2005px;
+  .u-block .u-image {
+    width: 500px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-3 .u-sheet-1 {
-    min-height: 511px;
+  .u-block{
+    margin-left: 5%;
+    margin-right: 5%;
   }
 
-  .u-section-3 .u-image-1 {
-    width: 340px;
-    height: 212px;
-  }
-
-  .u-section-4 .u-sheet-1 {
-    min-height: 849px;
-  }
-
-  .u-section-4 .u-image-1 {
-    width: 340px;
-    height: 212px;
-  }
-
-  .u-section-4 .u-text-3 {
-    margin-top: 20px;
-  }
-
-  .u-section-5 .u-sheet-1 {
-    min-height: 387px;
-  }
-
-  .u-section-5 .u-image-1 {
-    width: 340px;
-    height: 142px;
-  }
-
-  .u-section-5 .u-text-3 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-6 .u-sheet-1 {
-    min-height: 328px;
-  }
-
-  .u-section-6 .u-image-1 {
-    width: 340px;
-    height: 142px;
-  }
-  
-  .u-section-7 .u-sheet-1 {
-    min-height: 922px;
-  }
-
-  .u-section-7 .u-text-1 {
-    margin-right: 73px;
-  }
-
-  .u-section-7 .u-text-3 {
-    margin-right: 116px;
-  }
-
-  .u-section-7 .u-image-1 {
-    width: 340px;
-    height: 239px;
-  }
-
-  .u-section-7 .u-text-5 {
-    width: 340px;
-  }
-
-  .u-section-8 .u-sheet-1 {
-    min-height: 1580px;
-  }
-
-  .u-section-8 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-8 .u-image-1 {
-    width: 340px;
-    height: 60px;
-  }
-
-  .u-section-8 .u-image-2 {
-    width: 340px;
-    height: 31px;
-  }
-
-  .u-section-8 .u-image-3 {
-    width: 340px;
-    height: 257px;
-  }
-
-  .u-section-8 .u-image-4 {
-    width: 340px;
-    height: 164px;
-  }
-
-  .u-section-8 .u-text-6 {
-    width: 340px;
-  }
-
-  .u-section-10 .u-image-1 {
-    width: 340px;
-    height: 35px;
-  }
-
-  .u-section-11 .u-sheet-1 {
-    min-height: 1144px;
-  }
-
-  .u-section-11 .u-image-1 {
-    width: 340px;
-    height: 43px;
-  }
-
-  .u-section-11 .u-image-2 {
-    width: 340px;
-    height: 431px;
-  }
-
-  .u-section-12 .u-sheet-1 {
-    min-height: 1090px;
-  }
-
-  .u-section-12 .u-image-1 {
-    width: 340px;
-    height: 213px;
-  }
-
-  .u-section-12 .u-image-2 {
-    width: 340px;
-    height: 45px;
-  }
-
-  .u-section-12 .u-image-3 {
-    width: 340px;
-    height: 209px;
-  }
-
-  .u-section-13 .u-sheet-1 {
-    min-height: 2002px;
-  }
-
-  .u-section-13 .u-image-1 {
-    width: 340px;
-    height: 30px;
-  }
-
-  .u-section-13 .u-image-2 {
-    width: 340px;
-    height: 28px;
-  }
-
-  .u-section-13 .u-image-3 {
-    width: 340px;
-    height: 84px;
-  }
-
-  .u-section-13 .u-text-7 {
-    width: 340px;
-  }
-
-  .u-section-13 .u-image-4 {
-    width: 340px;
-    height: 204px;
-  }
-
-  .u-section-14 .u-sheet-1 {
-    min-height: 824px;
+  .u-block .u-image {
+    width: 400px;
   }
 }
