--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -1,10 +1,10 @@
 .u-section-1 {
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("../../images/f2df7ca24cc95a30cce6271266fe34ab2.png");
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.05)), url("../../images/f2df7ca24cc95a30cce6271266fe34ab2.png");
     background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-    min-height: 425px;
+    min-height: 500px;
 }
 
 .u-section-1 .u-image-1 {
@@ -146,6 +146,7 @@
 }
 
 .u-section-2 .u-text-2 {
+    font-size: 1.3rem;
     margin: 47px 89px 60px 49px;
 }
 
@@ -288,10 +289,6 @@
     padding: 0;
 }
 
-.u-section-3 .u-text-14 {
-    margin: 20px -483px 0 51px;
-}
-
 .u-section-3 .u-shape-4 {
     width: 23px;
     height: 23px;
@@ -405,10 +402,6 @@
     .u-section-3 .u-text-13 {
         width: auto;
         margin-right: -626px;
-    }
-
-    .u-section-3 .u-text-14 {
-        margin-top: 0;
     }
 
     .u-section-3 .u-text-15 {
