--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -32,7 +32,7 @@
 <body class="u-body">
     <header class="u-black u-clearfix u-header u-header" id="sec-ec72">
         <div class="u-clearfix u-sheet u-sheet-1">
-            <a href="landing.html" class="u-image u-image-1" title="Home">
+            <a href="index.html" class="u-image u-image-1" title="Home">
             </a>
             <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
                 <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -102,7 +102,7 @@
             <p class="u-text u-text-2" style="margin-top: 30px; height: 115px">I'm
                 passioned about computer vision either classical or ML and
                 love to tackle challenging engineering problems with unusual
-                conditions and solutions. In the mean time I play classical guitar, 
+                conditions and solutions. In the mean time I play classical guitar,
                 learn foreign languages, draw and build open source projects.
             </p>
         </div>
@@ -151,8 +151,13 @@
                             <p class="u-text u-text-grey-50 u-text-3">October 2020 -
                                 December 2020 | 3 months</p>
                             <p class="u-text u-text-16">
-                            <a href="https://sarafan.tech" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-3" target="_blank"></a>
-                            <a href="https://3divi.com/" target="_blank" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-4">3DiVi Inc.</a>, Chelyabinsk </p>
+                                <a href="https://sarafan.tech"
+                                    class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-3"
+                                    target="_blank"></a>
+                                <a href="https://3divi.com/" target="_blank"
+                                    class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-4">3DiVi
+                                    Inc.</a>, Chelyabinsk
+                            </p>
                             <p class="u-text u-text-5">While being at this role, I
                                 developed an isolated project in Python, did scientific
                                 research to identify most
@@ -164,7 +169,9 @@
                         <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-4">
                             <h2 class="u-text u-text-2">C++ Programmer</h2>
                             <p class="u-text u-text-grey-50 u-text-3">August 2020 - August 2021 | 1 year</p>
-                            <p class="u-text u-text-16"> <a href="https://sonda-tech.com/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-5" target="_blank">Sonda Technologies</a>, Chelyabinsk </p>
+                            <p class="u-text u-text-16"> <a href="https://sonda-tech.com/"
+                                    class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-5"
+                                    target="_blank">Sonda Technologies</a>, Chelyabinsk </p>
                             <p class="u-text u-text-5"> Integrated own implementation of
                                 neural network into existing C++ fingerprint verification system.
                                 Implementation was used only for inference: learning was
@@ -188,11 +195,12 @@
                         <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-1">
                             <h2 class="u-text u-text-2">Master's degree at Big Data and Machine Learning</h2>
                             <p class="u-text u-text-grey-50 u-text-2">2021 - 2023</p>
-                            <p class="u-text u-text-4"> 
+                            <p class="u-text u-text-4">
                                 <a href="https://itmo.ru/ru/"
                                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1"
                                     target="_blank">ITMO University
-                                </a>, Saint-Petersburg </p>
+                                </a>, Saint-Petersburg
+                            </p>
                             <p class="u-text u-text-5">This program is devoted to applicable
                                 Machine Learning and Data Analysis. The study of statistics
                                 intertwine with practical training on data analysis.</p>
@@ -339,15 +347,20 @@
                     class="u-file-icon u-icon u-icon-2"><img src="images/712040.png"
                         alt=""></span>&nbsp;ilia.moiseev.5@yandex.ru<br>
             </a> <a href="https://github.com/Oxid15/"
-                class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-3"><span
+                class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-2"><span
                     class="u-file-icon u-icon u-icon-3"><img src="images/733609.png" alt=""></span>&nbsp;CODE
             </a> <a href="https://www.linkedin.com/in/ilia-moiseev/"
-                class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-4"><span
+                class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-2"><span
                     class="u-file-icon u-icon u-icon-4"><img src="images/1384014.png" alt=""></span>&nbsp;CAREER
-            </a> <a href="https://www.behance.net/oxid15"
-                class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-5"><span
+            </a>
+            <a href="posts.html" class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-2"><span
+                    class="u-file-icon u-icon u-icon-5"><img src="images/writing.png" alt=""></span>&nbsp;BLOG
+            </a>
+            <a href="https://www.behance.net/oxid15"
+                class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-2"><span
                     class="u-file-icon u-icon u-icon-5"><img src="images/733594.png" alt=""></span>&nbsp;ART
-            </a> </div>
+            </a>
+        </div>
     </section>
     <footer class="u-align-center u-black u-clearfix u-footer u-footer" id="sec-550d">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
