Trying to fix element positions and simplify

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="u-container-style u-list-item u-repeater-item">
-                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-2">
+                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-1">
                             <h2 class="u-text u-text-2">Computer Vision Developer</h2>
                             <p class="u-text u-text-grey-50 u-text-3">January 2021 - August
                                 2021 | 8 months</p>
@@ -146,7 +146,7 @@
                         </div>
                     </div>
                     <div class="u-container-style u-list-item u-repeater-item">
-                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-3">
+                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-1">
                             <h2 class="u-text u-text-2">Intern</h2>
                             <p class="u-text u-text-grey-50 u-text-3">October 2020 -
                                 December 2020 | 3 months</p>
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                     <div class="u-container-style u-list-item u-repeater-item">
-                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-4">
+                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-1">
                             <h2 class="u-text u-text-2">C++ Programmer</h2>
                             <p class="u-text u-text-grey-50 u-text-3">August 2020 - August 2021 | 1 year</p>
                             <p class="u-text u-text-16"> <a href="https://sonda-tech.com/"
@@ -183,16 +183,13 @@
             </div>
         </div>
     </section>
-    <section class="u-clearfix u-image u-section-4" id="sec-2367" data-image-width="1600" data-image-height="901">
-        <div class="u-clearfix u-sheet u-valign-bottom u-sheet-1"></div>
-    </section>
-    <section class="u-black u-clearfix u-section-5" id="sec-3077">
+    <section class="u-black u-clearfix u-section-3">
         <div class="u-clearfix u-sheet u-sheet-1">
             <h1 class="u-text u-text-default u-text-1">My education</h1>
             <div class="u-list u-list-1">
                 <div class="u-repeater u-repeater-1">
                     <div class="u-container-style u-list-item u-repeater-item">
-                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-1">
+                        <div class="u-container-layout u-similar-container u-container-layout-1">
                             <h2 class="u-text u-text-2">Master's degree at Big Data and Machine Learning</h2>
                             <p class="u-text u-text-grey-50 u-text-2">2021 - 2023</p>
                             <p class="u-text u-text-4">
@@ -207,9 +204,8 @@
                         </div>
                     </div>
                     <div class="u-container-style u-list-item u-repeater-item">
-                        <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-2">
-                            <h2 class="u-text u-text-2">Bachelor's degree at Computer
-                                Engineering</h2>
+                        <div class="u-container-layout u-similar-container u-container-layout-1">
+                            <h2 class="u-text u-text-2">Bachelor's degree at Computer Engineering</h2>
                             <p class="u-text u-text-grey-50 u-text-2">2017 - 2021</p>
                             <p class="u-text u-text-8"> <a href="https://www.susu.ru/ru"
                                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-2"
@@ -218,7 +214,7 @@
                             <p class="u-text u-text-9">Computer engineering program in
                                 the&nbsp;&nbsp;<a href="https://comp.susu.ru/"
                                     class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-3">Department
-                                    of Electronic Computing Machines</a>&nbsp;allowed me to
+                                    of Electronic Computing Machines</a> allowed me to
                                 study low-level computer structure, C++ language, processor
                                 architectures, networks and Windows/Linux admin tools. </p>
                         </div>
