--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -156,6 +156,12 @@
     }
 }
 
+@media (max-width: 575px) {
+    .u-section-2 {
+        height: 500px;
+    }
+}
+
 .u-section-3 .u-sheet-1 {
     min-height: 1019px;
 }
