Update the landing page content

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -116,7 +116,7 @@
                     <div class="u-container-style u-list-item u-repeater-item">
                         <div class="u-container-layout u-similar-container u-valign-bottom-lg u-container-layout-1">
                             <h2 class="u-text u-text-2">Machine Learning Engineer</h2>
-                            <p class="u-text u-text-grey-50 u-text-3">October 2021 - now<br>
+                            <p class="u-text u-text-grey-50 u-text-3" id="current_position"> October 2021 - now<br>
                             </p>
                             <p class="u-text u-text-4"> <a href="https://sarafan.tech"
                                     class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-2 u-btn-1"
@@ -124,7 +124,10 @@
                             <p class="u-text u-text-5">
                                 This position offered a certain challenge at first, demanding
                                 to generalize from only-computer-vision tasks to
-                                general ML, speech processing and more.</p>
+                                general ML, speech processing and more. Working in a relatively small team
+                                I learned to work independently and build ML-driven systems from scratch starting
+                                from the data gathering and ending with the feedback collection and gradual improvement.
+                            </p>
                         </div>
                     </div>
                     <div class="u-container-style u-list-item u-repeater-item">
@@ -199,8 +202,12 @@
                                 </a>, Saint-Petersburg
                             </p>
                             <p class="u-text u-text-5">This program is devoted to applicable
-                                Machine Learning and Data Analysis. The study of statistics
-                                intertwine with practical training on data analysis.</p>
+                                Machine Learning and Data Analysis. After taking healthcare related specialty
+                                I learned a lot about what role data plays in the medical domain. Taking into account
+                                the importance of interpretability when using complex algorithms in healthcare, I
+                                devoted my master thesis to the comparison of different XAI techniques under the hood of
+                                one benchmark.
+                            </p>
                         </div>
                     </div>
                     <div class="u-container-style u-list-item u-repeater-item">
@@ -260,10 +267,10 @@
             </div>
         </div>
     </section>
-    <section class="u-clearfix u-image u-section-7" id="carousel_c865" data-image-width="1600" data-image-height="901">
+    <section class="u-clearfix u-image u-section-7" data-image-width="1600" data-image-height="901">
         <div class="u-clearfix u-sheet u-valign-bottom"></div>
     </section>
-    <section class="u-clearfix u-section-8" id="sec-0d77">
+    <section class="u-clearfix u-section-8">
         <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
             <h4 class="u-text u-text-default u-text-1">Programming Languages</h4>
             <div class="u-list u-list-1">
@@ -273,6 +280,13 @@
                             <img class="u-image u-image-default u-preserve-proportions u-image-1"
                                 src="images/download.png" alt="" data-image-width="1200" data-image-height="1200">
                             <p class="u-custom-item u-text u-text-2">Python </p>
+                        </div>
+                    </div>
+                    <div class="u-container-style u-list-item u-repeater-item">
+                        <div class="u-container-layout u-similar-container u-container-layout-4">
+                            <img class="u-image u-image-default u-preserve-proportions u-image-4"
+                                src="images/download31.png" alt="" data-image-width="512" data-image-height="512">
+                            <p class="u-custom-item u-text u-text-5">SQL </p>
                         </div>
                     </div>
                     <div class="u-container-style u-list-item u-repeater-item">
@@ -289,13 +303,6 @@
                             <p class="u-custom-item u-text u-text-4">C# </p>
                         </div>
                     </div>
-                    <div class="u-container-style u-list-item u-repeater-item">
-                        <div class="u-container-layout u-similar-container u-container-layout-4">
-                            <img class="u-image u-image-default u-preserve-proportions u-image-4"
-                                src="images/download31.png" alt="" data-image-width="512" data-image-height="512">
-                            <p class="u-custom-item u-text u-text-5">SQL </p>
-                        </div>
-                    </div>
                 </div>
             </div>
             <h4 class="u-text u-text-default u-text-6">Key Skills</h4>
@@ -308,17 +315,20 @@
             <ul class="u-text u-text-8">
                 <li> <span style="font-size: 1.5rem;">Research</span> </li>
                 <li> <span style="font-size: 1.5rem;">Rapid Prototyping</span> </li>
-                <li> <span style="font-size: 1.5rem;">Developement for <br> edge-devices</span>
                 <li> <span style="font-size: 1.5rem;">Deploying ML to production</span>
+                <li> <span style="font-size: 1.5rem;">Building data pipelines</span>
+                <li> <span style="font-size: 1.5rem;">Organizing data labeling</span>
                 </li>
             </ul>
             <ul class="u-text u-text-default u-text-9">
-                <li> <span style="font-size: 1.5rem;">CI</span> </li>
-                <li> <span style="font-size: 1.5rem;">Torch</span> </li>
-                <li> <span style="font-size: 1.5rem;">cmake</span> </li>
-                <li> <span style="font-size: 1.5rem;">opencv</span> </li>
                 <li> <span style="font-size: 1.5rem;">git</span> </li>
-                <li> <span style="font-size: 1.5rem;">bash</span> </li>
+                <li> <span style="font-size: 1.5rem;">CI</span> </li>
+                <li> <span style="font-size: 1.5rem;">MLOps tools</span> </li>
+                <li> <span style="font-size: 1.5rem;">Vector DBs</span> </li>
+                <li> <span style="font-size: 1.5rem;">Airflow</span> </li>
+                <li> <span style="font-size: 1.5rem;">pytorch</span> </li>
+                <li> <span style="font-size: 1.5rem;">opencv</span> </li>
+                <li> <span style="font-size: 1.5rem;">cmake</span> </li>
             </ul>
             <h4 class="u-text u-text-default u-text-6">Languages</h4>
             <ul class="u-text u-text-default u-text-11">
@@ -338,23 +348,21 @@
                             d="M373.333,266.88c-25.003,0-49.493-3.904-72.704-11.563c-11.328-3.904-24.192-0.896-31.637,6.699l-46.016,34.752    c-52.8-28.181-86.592-61.952-114.389-114.368l33.813-44.928c8.512-8.512,11.563-20.971,7.915-32.64    C142.592,81.472,138.667,56.96,138.667,32c0-17.643-14.357-32-32-32H32C14.357,0,0,14.357,0,32    c0,205.845,167.488,373.333,373.333,373.333c17.643,0,32-14.357,32-32V298.88C405.333,281.237,390.976,266.88,373.333,266.88z">
                         </path>
                     </svg><img></span>&nbsp;+7-968-115-8700
-            </a> <a href="mailto:ilia.moiseev.5@yandex.ru"
+            </a>
+            <a href="mailto:ilia.moiseev.5@yandex.ru"
                 class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-2"><span
                     class="u-file-icon u-icon u-icon-2"><img src="images/712040.png"
                         alt=""></span>&nbsp;ilia.moiseev.5@yandex.ru<br>
-            </a> <a href="https://github.com/Oxid15/"
+            </a>
+            <a href="posts.html" class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-2"><span
+                    class="u-file-icon u-icon u-icon-5"><img src="images/writing.png" alt=""></span>&nbsp;BLOG
+            </a>
+            <a href="https://github.com/Oxid15/"
                 class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-2"><span
                     class="u-file-icon u-icon u-icon-3"><img src="images/733609.png" alt=""></span>&nbsp;CODE
             </a> <a href="https://www.linkedin.com/in/ilia-moiseev/"
                 class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-2"><span
                     class="u-file-icon u-icon u-icon-4"><img src="images/1384014.png" alt=""></span>&nbsp;CAREER
-            </a>
-            <a href="posts.html" class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-2"><span
-                    class="u-file-icon u-icon u-icon-5"><img src="images/writing.png" alt=""></span>&nbsp;BLOG
-            </a>
-            <a href="https://www.behance.net/oxid15"
-                class="u-black u-border-none u-btn u-button-style u-hover-custom-color-2 u-btn-2"><span
-                    class="u-file-icon u-icon u-icon-5"><img src="images/733594.png" alt=""></span>&nbsp;ART
             </a>
         </div>
     </section>
@@ -366,6 +374,14 @@
             </p>
         </div>
     </footer>
+
+    <script type="text/javascript">
+        var today = new Date();
+        var year = today.getFullYear()
+        var passed = year - 2021
+        document.getElementById("current_position").textContent = "October 2021 - now | " + passed + " years";
+    </script>
+
 </body>
 
 </html>
