--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -327,6 +327,7 @@
                 <li> <span style="font-size: 1.5rem;">Vector DBs</span> </li>
                 <li> <span style="font-size: 1.5rem;">Airflow</span> </li>
                 <li> <span style="font-size: 1.5rem;">pytorch</span> </li>
+                <li> <span style="font-size: 1.5rem;">Flask</span> </li>
                 <li> <span style="font-size: 1.5rem;">opencv</span> </li>
                 <li> <span style="font-size: 1.5rem;">cmake</span> </li>
             </ul>
