--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -2,22 +2,9 @@
 layout: default
 ---
 
+{% include projects_head.html %}
+
 <div class="projects">
     {{ content }}
-
-    <!-- {%- if site.projects.size > 0 -%}
-    <h2 class="project-list-heading">Projects</h2>
-    <ul class="project-list">
-        {%- for project in site.projects -%}
-        <li>
-            {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-            <span class="project-meta">{{ project.date | date: date_format }}</span>
-            <h3>
-                <a class="project-link" href="{{ project.url | relative_url }}">
-                    {{ project.title | escape }}
-                </a>
-            </h3>
-        </li>
-        {%- endfor -%}
-    </ul> -->
+    {% include card_list.html collection=site.data.home.project_entries %}
 </div>
