--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -61,6 +61,10 @@
                                 class="u-button-style u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white"
                                 href="posts.html" style="padding: 10px 6px 10px 20px;">Posts</a>
                         </li>
+                        <li class="u-nav-item"><a
+                                class="u-button-style u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white"
+                                href="projects.html" style="padding: 10px 6px 10px 20px;">Projects</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="u-custom-menu u-nav-container-collapse">
@@ -73,6 +77,9 @@
                                 </li>
                                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="posts.html"
                                         style="padding: 10px 6px 10px 20px;">Posts</a>
+                                </li>
+                                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="projects.html"
+                                        style="padding: 10px 6px 10px 20px;">Projects</a>
                                 </li>
                             </ul>
                         </div>
