Add the same data to landing

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -10,8 +10,6 @@
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <link rel="stylesheet" href="assets/css/styles.css" media="screen">
     <link rel="stylesheet" href="assets/css/landing.css" media="screen">
-    <title>Ilia Moiseev - personal website</title>
-    <!-- <link rel="icon" href="images/icon_small.png"> -->
     <script class="u-script" type="text/javascript" src="assets/js/jquery.js" defer="defer"></script>
     <script class="u-script" type="text/javascript" src="assets/js/script.js" defer="defer"></script>
     <link id="u-theme-google-font" rel="stylesheet"
@@ -24,9 +22,26 @@
     }
     </script>
 
-    <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Home">
+    
+    <title>Ilia Moiseev | Personal website and blog</title>
+    <meta property="og:title" content="Ilia Moiseev">
+    <meta name="author" content="Ilia Moiseev">
+    <meta property="og:locale" content="en_US">
+    <meta name="description" content="Personal website and blog of Ilia Moiseev - Machine Learning Engineer about Machine Learning, MLOps, Cascade and other things">
+    <meta property="og:description" content="Personal website and blog of Ilia Moiseev - Machine Learning Engineer about Machine Learning, MLOps, Cascade and other things">
+    <link rel="canonical" href="oxid15.github.io">
+    <meta property="og:url" content="oxid15.github.io">
+    <meta property="og:site_name" content="Ilia Moiseev | Personal website and blog">
     <meta property="og:type" content="website">
+    <meta name="theme-color" content="#478ac9">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#dc724a">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 
 </head>
 
