--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,3 +1,6 @@
+---
+type: Person
+---
 <!DOCTYPE html>
 <html style="font-size: 16px;">
 
@@ -6,7 +9,6 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Ilia Moiseev">
-    <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <link rel="stylesheet" href="assets/css/styles.css" media="screen">
     <link rel="stylesheet" href="assets/css/landing.css" media="screen">
@@ -14,15 +16,7 @@
     <script class="u-script" type="text/javascript" src="assets/js/script.js" defer="defer"></script>
     <link id="u-theme-google-font" rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600,600i,700,700i,900%7CRoboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
-    <script type="application/ld+json">{
-		"@context": "http://schema.org",
-		"@type": "Organization",
-		"name": "",
-		"logo": "images/icon1.png"
-    }
-    </script>
 
-    
     <title>Ilia Moiseev | Personal website and blog</title>
     <meta property="og:title" content="Ilia Moiseev">
     <meta name="author" content="Ilia Moiseev">
