Add tag to landing too

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -37,6 +37,14 @@ type: Person
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZ3GX2B0TX"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-RZ3GX2B0TX');
+    </script>
 </head>
 
 <body class="u-body">
