--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,9 +17,7 @@ layout: default
                     {{ post.title | escape }}
                 </a>
             </h3>
-            {%- if site.show_excerpts -%}
-            {{ post.excerpt }}
-            {%- endif -%}
+            <p>{{ post.description }}</p>
         </li>
         {%- endfor -%}
     </ul>
