--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -1,23 +1,10 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: " en" }}">
+---
+layout: default
+---
 
 {% include projects_head.html %}
 
-<body>
-
-    {%- include header.html -%}
-
-    <main class="page-content" aria-label="Content">
-        <div class="wrapper">
-            <div class="projects">
-                {{ content }}
-                {% include card_list.html collection=site.data.home.project_entries %}
-            </div>
-        </div>
-    </main>
-
-    {%- include footer.html -%}
-
-</body>
-
-</html>
+<div class="projects">
+    {{ content }}
+    {% include card_list.html collection=site.data.home.project_entries %}
+</div>
