Add posts and projects links to short bio

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -124,11 +124,10 @@ type: Person
         <div class="u-clearfix u-sheet u-sheet-1">
             <h1 class="u-text u-text-default u-text-1" style="margin-top: 65px;">About
                 me</h1>
-            <p class="u-text u-text-2" style="margin-top: 30px; height: 115px">I'm
-                passioned about computer vision either classical or ML and
-                love to tackle challenging engineering problems with unusual
-                conditions and solutions. In the mean time I play classical guitar,
-                learn foreign languages, draw and build open source projects.
+            <p class="u-text u-text-2" style="margin-top: 30px; height: 115px">
+                I'm passionate about computer vision, either classical or ML,
+                and love to tackle challenging engineering problems with unusual conditions and solutions.
+                In the meantime, I play classical guitar, learn foreign languages, build <a href="projects.html" class="u-active-none u-button-link u-button-style u-none u-text-custom-color-2">open source projects</a> and write <a href="posts.html" class="u-active-none u-button-link u-button-style u-none u-text-custom-color-2">blog posts</a>.
             </p>
         </div>
     </section>
